--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
 Django==3.1.7
-django-livereload-server==0.3.2
 gunicorn==20.0.4
+Pillow==8.1.2
 psycopg2==2.8.6
 pytz==2021.1
 six==1.15.0
